--- a/templates/index.html
+++ b/templates/index.html
@@ -174,6 +174,10 @@
           --color-error-900: #7f1d1d;
           --color-error-focus: #dc2626;
           --color-error-content: #ffffff;
+          --color-malva: #9B8BB4;
+          --color-emmi:  #e69b4c;
+          --color-lavanda: #E6E6FA;
+          
         }
 </style>
 
@@ -347,7 +351,7 @@
 </script>
 
               <body class="h-full text-base-content">
-                <div class="min-h-screen bg-[#F5F5DC]">
+                <div class="min-h-screen" style="background-color: var(--color-lavanda);">
     <!-- Header -->
     <header id="header" class="py-6 px-8 bg-white/80 backdrop-blur-sm">
         <div class="container mx-auto flex items-center justify-between">
@@ -430,9 +434,10 @@
         {% load form_filters %}
 
 <section id="booking" class="py-20 bg-white">
-  <div class="container mx-auto px-4">
+  <div class=" container mx-auto px-4">
     <h2 class="text-3xl font-bold text-center text-[#9B8BB4] mb-12">Agenda tu Cita</h2>
-    <div class="max-w-xl mx-auto bg-[#F5F5DC] p-8 rounded-xl shadow-lg">
+    <div class="max-w-xl mx-auto p-8 rounded-xl shadow-lg" style="background-color: var(--color-malva);">
+
       <form method="post" class="space-y-6 font-light">
         {% csrf_token %}
         <div>
@@ -455,9 +460,11 @@
           {{ form.mensaje.label_tag }}
           {{ form.mensaje|add_class:"w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:border-[#A7D2CB]" }}
         </div>
-        <button type="submit" class="w-full bg-[#FFB6C1] hover:bg-[#FADADD] text-gray-800 py-3 rounded-lg transition duration-300">
+        <button type="submit" class="w-full text-white py-3 rounded-lg transition duration-300"
+        style="background-color: var(--color-emmi);">
           Reservar Cita
         </button>
+
       </form>
     </div>
   </div>
