--- a/templates/index.html
+++ b/templates/index.html
@@ -436,7 +436,7 @@
 <section id="booking" class="py-20 bg-white">
   <div class=" container mx-auto px-4">
     <h2 class="text-3xl font-bold text-center text-[#9B8BB4] mb-12">Agenda tu Cita</h2>
-    <div class="max-w-xl mx-auto p-8 rounded-xl shadow-lg" style="background-color: var(--color-malva);">
+    <div class="max-w-xl mx-auto p-8 rounded-xl shadow-lg" style="background-color: var(--color-emmi);">
 
       <form method="post" class="space-y-6 font-light">
         {% csrf_token %}
@@ -461,7 +461,7 @@
           {{ form.mensaje|add_class:"w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:border-[#A7D2CB]" }}
         </div>
         <button type="submit" class="w-full text-white py-3 rounded-lg transition duration-300"
-        style="background-color: var(--color-emmi);">
+        style="background-color: var(--color-malva);">
           Reservar Cita
         </button>
 
