fix: add viewport meta tag for responsive design

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <html class="">
               
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
