--- a/templates/gracias.html
+++ b/templates/gracias.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gracias por tu cita</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
