--- a/templates/lista_citas.html
+++ b/templates/lista_citas.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Citas Agendadas</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="bg-[#F5F5DC] p-8">
 
