--- a/templates/beauty.html
+++ b/templates/beauty.html
@@ -411,7 +411,7 @@
                     <p class="text-gray-600 leading-relaxed">En emmi brow design, creemos que las cejas perfectas son el marco que realza la belleza natural de cada rostro. Con años de experiencia y pasión por nuestro trabajo, nos dedicamos a crear diseños personalizados que reflejen la esencia única de cada cliente.</p>
                 </div>
                 <div>
-                    <img class="rounded-lg shadow-xl" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/624d821e06-696729b2aaadf9e71ea9.png" alt="professional female brow artist working in modern beauty salon, lifestyle photography" >
+                    <img class="rounded-lg shadow-xl" src="../media/Nosotros/wellness.jpeg" alt="professional female brow artist working in modern beauty salon, lifestyle photography" >
                 </div>
             </div>
         </div>
